--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		   <plugin>
 			   <groupId>org.apache.maven.plugins</groupId>
 			   <artifactId>maven-war-plugin</artifactId>
-			   <version>3.4.0</version> or latest stable
+			   <version>3.4.0</version> 
 		   </plugin>
 	   </plugins>
 	</build>
